k8s-intro/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mon-nginx
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
