k8s-intro/pod-avec-config.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-config
spec:
  containers:
    - name: nginx
      image: nginx:alpine
