k8s-intro/app-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-dev
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mon-app
  template:
    metadata:
      labels:
        app: mon-app
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-dev-service
  namespace: dev
spec:
  selector:
    app: mon-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
