k8s-intro/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx          # Cible les Pods avec le label app=nginx
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080   # Port accessible sur ta machine
