k8s-intro/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mon-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-dev-service
                port:
                  number: 80
